# modem-keepaliver

./: .gitignore  .mergify.yml  CHANGELOG.md  Cargo.toml  Cross.toml  README.md
.cargo/: config
.github/: dependabot.yml
.github/workflows/: build-and-package.yml  cd.yml  rust-build-and-publish.yaml  rust-build-and-publish.yml
packaging/: modem-keepaliver-defaults  modem-keepaliver.service  polkit-rules.pkla
packaging/deb_scripts/: after_remove.sh  before_install.sh
src/: dbus_proxies.rs  main.rs  modem_manager.rs
