[package]
name = "modem-keepaliver"
version = "0.2.1"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.18", features = ["derive"] }
log = "0.4.20"
num-derive = "0.4.2"
num-traits = "0.2.18"
simplelog = "0.12.1"
tokio = { version = "1.36.0", features = ["rt-multi-thread","time","macros"] }
zbus = "3.15.0"

[profile.release]
opt-level="s"
lto="fat"
