[package]
name = "modem-keepaliver"
version = "0.2.1"
edition = "2021"

[dependencies]
anyhow = "1.0.82"
clap = { version = "4.5.4", features = ["derive"] }
log = "0.4.21"
num-derive = "0.4.2"
num-traits = "0.2.19"
simplelog = "0.12.2"
tokio = { version = "1.37.0", features = ["rt-multi-thread","time","macros"] }
zbus = "4.2.0"

[profile.release]
opt-level="s"
lto="fat"
