[package]
name = "modem-keepaliver"
version = "0.2.1"
edition = "2021"

[dependencies]
anyhow = { default-features = false, version = "1.0.82" }
clap = { version = "4.5.4", features = ["derive", "std"], default-features = false }
log = "0.4.21"
num-derive = "0.4.2"
num-traits = { default-features = false, version = "0.2.18" }
simplelog = { features = ["termcolor"], default-features = false, version = "0.12.2" }
tokio = { version = "1.37.0", features = ["time", "rt-multi-thread", "macros"], default-features = false }
zbus = "4.2.0"

[profile.release]
opt-level="s"
lto="fat"
